[project]
name = "oam-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oppliger J.", email = "account@oppliger.cc" }
]
requires-python = ">=3.13"
dependencies = [
    "open-asset-model>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
